-bug#0001443: format_snmp_string can return a number with a leading space 
-bug#0001446: Wrong dates override in CSV export 
-bug#0001456: oid_uptime is not parsed correctly 
-bug#0001464: Typo in install/index.php 
-bug#0001468: Tree is not expanded correctly
-bug#0001469: Tree is not being expanded if user followed link outside of cacti
-bug#0001478: Combo boxes on Graph Management page produce URLs with leading spaces
-bug: Top Graph Header Breaks When Plugins Used
-bug: SNMP v3 Password issue caused by Firefox's Password AutoFill
-bug: Strip Quotes does not properly handle the value 'U'

0.8.7d
-bug#0001336: Allow to specify on_change handler for checkbox_group
-bug#0001338: When Using Web Basic Authentication HTML Bookmarks Do Not Work 
-bug#0001388: Spine uses illegal flag for ping on Mac OS X 
-bug#0001351: Deleting 1000 graphs along with their Data Sources crashes the Server
-bug#0001361: SNMP query: 'No more variables left in this MIB View' instead of value of input field 
-bug#0001374: ss_host_disk.php etc. error corrected when using SNMP V3 (index off by 1)
-bug#0001376: graph_items.php variable $id defined in wrong place
-bug#0001377: Several bugs in new cli script "structured_rra_paths"
-bug#0001378: ping.pl script fails when using tcp:hostname    
-bug#0001382: cdef.php error due to wrong function name
-bug#0001383: syntax error in lib/rrd.php with PHP 4.4.4
-bug#0001384: utilities.php does not handle view_snmp_cache when host_id = -1 (Any)
-bug#0001385: LDAP Error: Group DN could not be found
-bug#0001391: parsing snmp string with "=" ?? --> WARNING: Result from SNMP not valid
-bug#0001392: Problem on CDEF function ALL|SIMILAR_DATA_SOURCES_(NO)?DUPS 
-bug#0001394: Error of variable in lib/html_tree.php 
-bug#0001398: Cross site scripting checking is overly protective on search filters
-bug#0001400: LDAP authentication results in PHP warning message
-bug: Resolved issue with reapply suggested names not working for data sources under certain conditions